--- a/dev/scss/parts/_header.scss
+++ b/dev/scss/parts/_header.scss
@@ -1,11 +1,15 @@
+$width: 1140px;
+$gap: 40px;
+
+
 .headerContent {
 	margin: auto;
 	display: flex;
 	justify-content: space-between;
-	width: 1140px;
+	width: $width;
 	
 	.logo {
-		width: calc(25% - 20px);
+		width: ($width / 4 - (($gap/4)*3));
 		margin-top: 8.5rem;
 		position: relative;
 		
@@ -41,7 +45,7 @@
 		display: flex;
 		flex-flow: wrap;
 		justify-content: space-between;
-		width: calc(75% - 20px);
+		width: ($width / 4) * 3 - ($gap / 4);
 	}
 	
 	h1 {
