--- a/dev/scss/parts/_header.scss
+++ b/dev/scss/parts/_header.scss
@@ -1,15 +1,15 @@
 $width: 1140px;
 $gap: 40px;
 
-
 .headerContent {
 	margin: auto;
 	display: flex;
 	justify-content: space-between;
 	width: $width;
+	position: relative;
 	
 	.logo {
-		width: ($width / 4 - (($gap/4)*3));
+		width: ($width / 4 - ($gap*0.75));
 		margin-top: 8.5rem;
 		position: relative;
 		
