--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -9,7 +9,7 @@ html
         header.header
             div.headerContent
                 div.logo
-                    img(src="images/motive.png" alt="logo")
+                    + image("motive.png", "motive")
                     a(href="")
                         p moti
                             span ve
@@ -31,7 +31,7 @@ html
                                 a(href="") Contact
                     div.search
                         a(href="")
-                            img(src="images/search.jpg" alt="search")
+                            + image("search.jpg", "search")
                         form 
                             input(type="search" placeholder="Search here")
                     h1 Design is not the narrow application of formal skills, it is a way of thinking.
@@ -42,19 +42,19 @@ html
                     div.content.blog
                         article
                             div.backgroundLink
-                                img(src="images/image1.jpg" alt="image1")
+                                + image("image1.jpg", "image1")
                                 a(href="")
                             h3 Blog post titles in here
                             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.   
                         article
                             div.backgroundLink
-                                img(src="images/image2.jpg" alt="image2")
+                                + image("image2.jpg", "image2")
                                 a(href="")
                             h3 Blog post titles in here
                             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.
                         article
                             div.backgroundLink
-                                img(src="images/image3.jpg" alt="image3")
+                                + image("image3.jpg", "image3")
                                 a(href="")
                             h3 Blog post titles in here
                             p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias nisi quaerat quasi accusantium fuga error animi.
@@ -62,42 +62,42 @@ html
                     h2.title recent projects
                     div.content.gallery
                         article
-                            img(src="images/image4.jpg" alt="image4")
+                            + image("image4.jpg", "image4")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image5.jpg" alt="image5")
+                            + image("image5.jpg", "image5")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image6.jpg" alt="image6")
+                            + image("image6.jpg", "image6")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image7.jpg" alt="image7")
+                            + image("image7.jpg", "image7")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image8.jpg" alt="image8")
+                            + image("image8.jpg", alt="image8")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image9.jpg" alt="image9")
+                            + image("image9.jpg", "image9")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image10.jpg" alt="image10")
+                            + image("image10.jpg", "image10")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
                         article
-                            img(src="images/image11.jpg" alt="image11")
+                            + image("image11.jpg", "image11")
                             a(href="")
                                 h3 In this way, envanto
                                 p Photography
@@ -115,4 +115,4 @@ html
                     article
                         h4 Follows us
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ab possimus consequuntur.
-                        img(src="images/social.png" alt="social")
+                        + image("social.png", "social")
