--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -18,6 +18,7 @@ html {
 		.main {
 			background: #f6f6f6;
 			.title {
+                padding-top: 1.8rem;
 				margin: 4rem 0 2rem 0;
 				border-top: .1rem dotted #959595;
 				font: 1.4rem/2.1rem 'Open Sans';
@@ -80,7 +81,3 @@ html {
 		}
 	}
 }
-	
-	
-	
-	
