--- a/app/scss/parts/_blog.scss
+++ b/app/scss/parts/_blog.scss
@@ -37,7 +37,7 @@ $widthBlock: 255px;
         &::after {
             content: '';
             display: block;
-            background: url(../images/link.png);
+            background: url(../assets/img/link.png);
             width: 36px;
             height: 36px;
             position: relative;
