--- a/app/css/main.css
+++ b/app/css/main.css
@@ -182,7 +182,7 @@ html {
     .backgroundLink a::after {
       content: '';
       display: block;
-      background: url(../images/link.png);
+      background: url(../assets/img/link.png);
       width: 36px;
       height: 36px;
       position: relative;
