--- a/app/css/main.css
+++ b/app/css/main.css
@@ -137,7 +137,7 @@ html {
     margin-right: 2rem;
     text-decoration: none;
     color: #959595; }
-    .menu a:hover {
+    .menu a:active {
       color: #565656;
       border-bottom: .1rem solid #565656; }
     .menu a:nth-of-type(6) {
@@ -149,7 +149,10 @@ html {
 
 @media screen and (min-width: 1170px) {
   .menu {
-    margin-bottom: 9rem; } }
+    margin-bottom: 9rem; }
+    .menu a:hover {
+      color: #565656;
+      border-bottom: .1rem solid #565656; } }
 
 .blog {
   margin: 4rem 0 6rem 0; }
